# lighthouse_ros

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  example_decodeV2.txt  example_fw.txt  package.xml  raw_frames.txt  raw_frames2.txt  raw_frames3.txt  raw_frames4.txt  raw_frames_new_basestation_v2_ch1.txt  raw_frames_old_basestation_v2_ch2.txt  setup.cfg  setup.py
attic/lighthouse_amcl/: CMakeLists.txt  package.xml
attic/lighthouse_amcl/src/: lighthouse_amcl.cpp
attic/lighthouse_sensor_model/: CMakeLists.txt  package.xml
attic/lighthouse_sensor_model/test/: CMakeLists.txt  test_lighthouse_sensor_model.cpp
attic/lighthouse_testbench/lighthouse_testbench/: package.xml  setup.cfg  setup.py
datasets/: raw_frames_ch2_30cm_line_50cm_below.txt
docker/: run.sh  (+2 more)
lighthouse_amcl/: package.xml
lighthouse_base_geometry_estimation/: package.xml  setup.cfg  setup.py
lighthouse_base_geometry_estimation/launch/: lighthouse_base_geometry_estimation.launch.py
lighthouse_base_geometry_estimation/lighthouse_base_geometry_estimation/: base_geometry_estimation_node.py  base_geometry_simple_estimation.py
lighthouse_base_geometry_estimation/test/: test_base_geometry_estimation.py
lighthouse_deck_broadcaster/: CMakeLists.txt  lighthouse_deck_broadcaster.xml  package.xml
lighthouse_deck_broadcaster/include/lighthouse_deck_broadcaster/: lighthouse_deck_broadcaster.hpp
lighthouse_deck_broadcaster/src/: lighthouse_deck_broadcaster.cpp
lighthouse_deck_broadcaster/test/: test_load_lighthouse_deck_broadcaster.cpp
lighthouse_deck_driver/: CMakeLists.txt  README.md  package.xml
lighthouse_deck_driver/include/lighthouse_deck_driver/: lighthouse_deck_driver_node.hpp
lighthouse_deck_driver/launch/: lighthouse_deck_driver.launch.py
lighthouse_deck_driver/src/: lighthouse_deck_driver_node.cpp
lighthouse_deck_hardware/: CMakeLists.txt  lighthouse_deck_hardware.xml  package.xml
lighthouse_deck_hardware/config/: lighthouse_deck_hardware.yaml
lighthouse_deck_hardware/include/lighthouse_deck_hardware/: lighthouse_deck_hardware.hpp
lighthouse_deck_hardware/src/: lighthouse_deck_hardware.cpp
lighthouse_deck_hardware/test/: test_load_lighthouse_deck_hardware.cpp
lighthouse_deck_semantic_component/: CMakeLists.txt  package.xml
lighthouse_deck_semantic_component/include/lighthouse_deck_semantic_component/: lighthouse_deck_semantic_component.hpp
lighthouse_deck_semantic_component/src/: lighthouse_deck_semantic_component.cpp
lighthouse_deck_semantic_component/test/: test_lighthouse_deck_semantic_component.cpp
lighthouse_deck_utils/: CMakeLists.txt  package.xml
lighthouse_deck_utils/include/lighthouse_deck_utils/: serial_port.hpp  utils.hpp
lighthouse_deck_utils/src/: serial_port.cpp  utils.cpp
lighthouse_deck_utils/test/: test_utils.cpp
lighthouse_geometry_utils/: CMakeLists.txt  CPPLINT.cfg  package.xml
lighthouse_geometry_utils/include/lighthouse_geometry_utils/: ceres_helpers.hpp  datatypes.hpp  deck_pose_optimization.hpp  station_angles_utils.hpp  station_geometry_initialization.hpp  station_geometry_optimization.hpp  station_pose_pnp_solver.hpp  utils.hpp
lighthouse_geometry_utils/src/: ceres_helpers.cpp  deck_pose_optimization.cpp  station_angles_utils.cpp  station_geometry_initialization.cpp  station_geometry_optimization.cpp  station_pose_pnp_solver.cpp  utils.cpp
lighthouse_geometry_utils/test/: test_ceiling_station.cpp  test_deck_pose_optimization.cpp  test_helpers.cpp  test_helpers.hpp  test_real_data_collinearity.cpp  test_real_world_measurements.cpp  test_station_geometry_initialization.cpp  test_station_geometry_optimization.cpp  test_station_pose_pnp_solver.cpp  test_test_helpers.cpp
lighthouse_localization/: CMakeLists.txt  README.md  package.xml
lighthouse_localization/include/lighthouse_localization/: lighthouse_localization_node.hpp
lighthouse_localization/src/: lighthouse_localization_main.cpp  lighthouse_localization_node.cpp
lighthouse_oak_camera/: CMakeLists.txt  package.xml
lighthouse_oak_camera/config/: oak_lr_basic_params.yaml
lighthouse_oak_camera/launch/: main.launch.py
lighthouse_protocol_decoder/: CMakeLists.txt  package.xml
lighthouse_protocol_decoder/include/lighthouse_protocol_decoder/: constants.hpp  crc32.hpp  data_frame_decoder.hpp  datatypes.hpp  lighthouse_protocol_decoder.hpp  logger.hpp  measurement_processor.hpp  ootx_frame_decoder.hpp  sweep_processor.hpp  sync_frame_decoder.hpp
lighthouse_protocol_decoder/src/: crc32.cpp  data_frame_contents.cpp  data_frame_decoder.cpp  lighthouse_protocol_decoder.cpp  measurement_processor.cpp  ootx_frame_decoder.cpp  sweep_processor.cpp  sync_frame_decoder.cpp
lighthouse_protocol_decoder/test/: test_crc32.cpp  test_data_frame_decoder.cpp  test_helpers.cpp  test_helpers.hpp  test_lighthouse_protocol_decoder.cpp  test_measurement_processor.cpp  test_ootx_frame_decoder.cpp  test_sweep_processor.cpp  test_sync_frame_decoder.cpp
lighthouse_ros/: ootx_frame.txt  package.xml  requirements.txt  setup.py
lighthouse_ros/launch/: lighthouse_ros.launch.py
lighthouse_ros/lighthouse_ros/: __init__.py  calibration.py  config.py  core.py  custom_crc.py  file_dump_replayer.py  file_parser_node.py  frame_decoders.py  lighthouse_calibration.py  lighthouse_node.py  lighthouse_protocol.py  lighthouse_ros_node.py  measurement_processor.py  node.py  ootx_decoder.py  pulse_processor.py  serial_handler.py  sweep_processor.py  types.py  utils.py
lighthouse_ros_msgs/: CMakeLists.txt  package.xml
lighthouse_ros_msgs/msg/: SensorAngles.msg  SensorMeasurements.msg
lighthouse_station_mapper/: CMakeLists.txt  README.md  package.xml
lighthouse_station_mapper/launch/: interactive_mapping.launch.py  lighthouse_post_data.launch.py  main.launch.py  mapper_with_driver.launch.py  only_driver.launch.py  only_mapper.launch.py
lighthouse_station_mapper/rviz/: config.rviz
lighthouse_station_mapper/src/: command_queue.cpp  mapper_screen_renderer.cpp  mapper_ui_main.cpp  mapper_ui_node.cpp
lighthouse_testbench/lighthouse_testbench_bringup/: package.xml
(+75 files in other folders)
