<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lighthouse_base_geometry_estimation</name>
  <version>0.0.1</version>
  <description>Package to estimate the geometry of the Lighthouse base stations</description>
  <maintainer email="developer@todo.todo">developer</maintainer>
  <license>Apache 2.0</license>

  <exec_depend>python3-opencv</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
