<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lighthouse_deck_driver</name>
  <version>0.1.0</version>
  <description>ROS2 driver for Bitcraze Lighthouse positioning deck using serial communication</description>
  <maintainer email="glpuga@ekumenlabs.com">Gerardo Puga</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>lighthouse_deck_utils</depend>
  <depend>lighthouse_protocol_decoder</depend>
  <depend>lighthouse_deck_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
