<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lighthouse_oak_camera</name>
  <version>0.0.0</version>
  <description>Motion capture OAK-LR camera driver integration package</description>
  <maintainer email="glpuga@ekumenlabs.com">developer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <!-- Camera and image dependencies -->
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <!-- Luxonis OAK camera driver -->
  <exec_depend>depthai_ros_driver</exec_depend>
  <exec_depend>depthai_bridge</exec_depend>

  <!-- Stereo and depth processing -->
  <exec_depend>stereo_image_proc</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>

  <!-- Visualization (optional) -->
  <exec_depend>rviz2</exec_depend>
  <exec_depend>image_view</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
