<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lighthouse_ros</name>
  <version>0.0.1</version>
  <description>Lighthouse deck decoding node for ROS</description>

  <maintainer email="juancarosella96@creativa77.com.ar">hitalio</maintainer>
  <maintainer email="glpuga@ekumenlabs.com">Gerardo Puga</maintainer>

  <license>Apache 2.0</license>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>lighthouse_ros_msgs</exec_depend>

  <exec_depend>python3-smbus2</exec_depend>
  <exec_depend>python3-bitarray</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
